app/assets/stylesheets/application.scss
// $navbar-default-bg: #312312;
// $light-orange: #ff8c00;
// $navbar-default-color: $light-orange;

@import "font-awesome-sprockets";
@import "font-awesome";
@import "bootstrap";
@import "jumpstart/sticky-footer";
@import "jumpstart/announcements";

// Masquerade alert shouldn't have a bottom margin
body > .alert {
  margin-bottom: 0;
}

/* tabs with radio buttons start */
.tabbed figure {
  display: block;
  margin-left: 0;
  border-bottom: 1px solid silver;
  clear: both;
}

.tabbed > input,
.tabbed figure > div { display: none; }

.tabbed figure>div {
  padding: 20px;
  width: 100%;
  border: 1px solid silver;
  background: #fff;
  line-height: 1.5em;
  letter-spacing: 0.3px;
  color: #444;
}

nav label {
  float: left;
  padding: 15px 15px;
  border-top: 1px solid silver;
  border-right: 1px solid silver;
  background: hsl(210,50%,50%);
  color: #eee;
}

nav label:nth-child(1) { border-left: 1px solid silver; }
nav label:hover { background: hsl(210,50%,40%); }
nav label:active { background: #ffffff; }

#pro_flange:checked ~ figure .flange,
#pro_fitting:checked ~ figure .fitting,
#pro_sheet:checked ~ figure .sheet,
#pro_welding:checked ~ figure .welding,
#pro_machining:checked ~ figure .machining,
#pro_testing:checked ~ figure .testing,
#pro_production_output:checked ~ figure .production_output,
#pro_forge_ring_rolled:checked ~ figure .forge_ring_rolled,
#pro_semifinished_semisteel:checked ~ figure .semifinished_semisteel,
#pro_pipe:checked ~ figure .pipe,
#pur_flange:checked ~ figure .flange,
#pur_fitting:checked ~ figure .fitting,
#pur_sheet:checked ~ figure .sheet,
#pur_welding:checked ~ figure .welding,
#pur_machining:checked ~ figure .machining,
#pur_testing:checked ~ figure .testing,
#pur_production_output:checked ~ figure .production_output,
#pur_forge_ring_rolled:checked ~ figure .forge_ring_rolled,
#pur_semifinished_semisteel:checked ~ figure .semifinished_semisteel,
#pur_pipe:checked ~ figure .pipe{ display: block; }

#pro_flange:checked ~ nav label[for="pro_flange"],
#pro_fitting:checked ~ nav label[for="pro_fitting"],
#pro_sheet:checked ~ nav label[for="pro_sheet"],
#pro_welding:checked ~ nav label[for="pro_welding"],
#pro_machining:checked ~ nav label[for="pro_machining"],
#pro_testing:checked ~ nav label[for="pro_testing"],
#pro_production_output:checked ~ nav label[for="pro_production_output"],
#pro_forge_ring_rolled:checked ~ nav label[for="pro_forge_ring_rolled"],
#pro_semifinished_semisteel:checked ~ nav label[for="pro_semifinished_semisteel"],
#pro_pipe:checked ~ nav label[for="pur_pipe"],
#pur_flange:checked ~ nav label[for="pur_flange"],
#pur_fitting:checked ~ nav label[for="pur_fitting"],
#pur_sheet:checked ~ nav label[for="pur_sheet"],
#pur_welding:checked ~ nav label[for="pur_welding"],
#pur_machining:checked ~ nav label[for="pur_machining"],
#pur_testing:checked ~ nav label[for="pur_testing"],
#pur_production_output:checked ~ nav label[for="pur_production_output"],
#pur_forge_ring_rolled:checked ~ nav label[for="pur_forge_ring_rolled"],
#pur_semifinished_semisteel:checked ~ nav label[for="pur_semifinished_semisteel"],
#pur_pipe:checked ~ nav label[for="pur_pipe"] {
  background: white;
  color: #111;
  position: relative;
  border-bottom: none;
}

#pro_flange:checked ~ nav label[for="pro_flange"]:after,
#pro_fitting:checked ~ nav label[for="pro_fitting"]:after,
#pro_sheet:checked ~ nav label[for="pro_sheet"]:after,
#pro_welding:checked ~ nav label[for="pro_welding"]:after,
#pro_machining:checked ~ nav label[for="pro_machining"]:after,
#pro_testing:checked ~ nav label[for="pro_testing"]:after,
#pro_production_output:checked ~ nav label[for="pro_production_output"]:after,
#pro_forge_ring_rolled:checked ~ nav label[for="pro_forge_ring_rolled"]:after,
#pro_semifinished_semisteel:checked ~ nav label[for="pro_semifinished_semisteel"]:after,
#pro_pipe:checked ~ nav label[for="pro_pipe"]:after,
#pur_flange:checked ~ nav label[for="pur_flange"]:after,
#pur_fitting:checked ~ nav label[for="pur_fitting"]:after,
#pur_sheet:checked ~ nav label[for="pur_sheet"]:after,
#pur_welding:checked ~ nav label[for="pur_welding"]:after,
#pur_machining:checked ~ nav label[for="pur_machining"]:after,
#pur_testing:checked ~ nav label[for="pur_testing"]:after,
#pur_production_output:checked ~ nav label[for="pur_production_output"]:after,
#pur_forge_ring_rolled:checked ~ nav label[for="pur_forge_ring_rolled"]:after,
#pur_semifinished_semisteel:checked ~ nav label[for="pur_semifinished_semisteel"]:after,
#pur_pipe:checked ~ nav label[for="pur_pipe"]:after {
  content: "";
  display: block;
  position: absolute;
  height: 2px;
  width: 100%;
  background: white;
  left: 0;
  bottom: -1px;
}
/* tabs with radio buttons end */


.front-side {
  width: 17em;
  height: 9em;
  display: grid;
  grid-template-columns: 2% 96% 2%;
  grid-template-rows: 4% 92% 4%;
  overflow: hidden;
  box-shadow: 2px 5px 15px 0px #17161694;
  background-color: #122529;
  margin: auto
}
.color-grid {
  display: grid;
  grid-template-columns: repeat(3, 150px);
  grid-template-rows: repeat(8, 50px);
  grid-gap: 8px;
  width: 150px;
  height: 400px;
  transform: rotate(-45deg);
}
.black {
  background-color: #343536;
  grid-column: 2 / span 2;
  grid-row: 1 / span 3;
}
.red1 {
  background-color: #e45e4f;
  grid-row: 2 / span 5;
}
.red2 {
  background-color: #e45e4f;
  grid-column: 2 / span 2;
  grid-row: 4/7;
}
.green {
  background-color: #007e67;
  grid-column: 2/4;
  grid-row: 7/9;
}

.info-grid {
  grid-column: 2/3;
  grid-row: 2/3;
  z-index: 2;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.363);
  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.432);
  border-radius: 6px;
  font-size: 0.7rem; /*12px;*/
  display: grid;
  grid-template-columns: 15px repeat(3, 1fr) 15px;
  grid-template-rows: repeat(3, 1fr);
  line-height: 1px;
}
.info-grid .name {
  grid-column: 2 / span 2;
  grid-row: 1 / span 1;
  font-size: 1.2em;
  letter-spacing: .1rem;
  margin-top: 8px;
}
.info-grid .name h5{
  font-weight: unset;
}
.info-grid .addr {
  grid-column: 2 / span 2;
  grid-row: 3;
}

.info-grid .phoneNo {
  grid-column: 3 / span 2;
  grid-row: 2;
  text-align: end;
}
.info-grid .emailId {
  grid-column: 3 / span 2;
  grid-row: 3;
  text-align: end;
  font-size: 1.1em;
}

.back-side .name-tag {
  grid-column: 1 / span 4;
  grid-row: 2 / span 1;
  align-self: center;
  z-index: 2;
  width: 100%;
  height: 40%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: rgba(255, 255, 255, 0.363);
  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.288);
  font-size: 0.6rem; /*12px;*/
  letter-spacing: .1rem;
  text-align: center;
}
.name-tag h1,h3{
  margin: 2px;
  font-weight: unset;
}
.credits{
  margin-top:40px;
  text-align: center;
  color: #343536;
}

